# rgb-log

./: Cargo.toml  README.md
examples/: demo.rs  no_submodules.rs
src/: buf_ext.rs  lib.rs  log.rs
src/log/: buf.rs  builder.rs  color.rs  padding.rs  program_name.rs
