[package]
name = "rgb-log"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", default-features = false }
tokio = { version = "1", default-features = false, optional = true }
chrono = { version = "0.4.41", features = ["serde"], optional = true }

[lib]
path = "./src/lib.rs"

[features]
default = ["chrono", "seconds"]
# default = []
chrono = ["dep:chrono"]
seconds = ["chrono"]
milliseconds = ["chrono"]
# Includes a T in the middle and a Z at the end of the timestamp,
# not fancy but nice for parsing output
rfc = ["chrono"]
# Provides different ways to store lines output by Log
buf-ext = [
    "tokio/sync",
    "tokio/rt",
    "tokio/fs",
    "tokio/io-util",
    "tokio/time",
    "tokio/macros",
]
